k8-deploy/postgrest-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: <PGRST_NAMESPACE>
 labels:
   name: <PGRST_NAMESPACE>
