k8-deploy/postgrest-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger
  namespace: <PGRST_NAMESPACE>
  labels:
    app: swagger
    tier: frontend
spec:
  type: NodePort
  ports:
   - port: 8080
  selector:
    app: swagger
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger
  namespace: <PGRST_NAMESPACE>
  labels:
    app: swagger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: swagger
        tier: frontend
    spec:
      containers:
        - env:
            - name: API_URL
              value: "<PGRST_OPENAPI_SERVER_PROXY_URI>"
          image: swaggerapi/swagger-ui
          name: swagger
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: <PGRST_NAMESPACE>
  labels:
    app: postgrest
    tier: frontend
spec:
  type: NodePort
  ports:
   - port: 3000
  selector:
    app: postgrest
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  namespace: <PGRST_NAMESPACE>
  labels:
    app: postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
      tier: frontend
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: postgrest
        tier: frontend
    spec:
      containers:
        - image: postgrest/postgrest:latest
          name: postgrest
        - env:
            - name: PGRST_OPENAPI_SERVER_PROXY_URI
              value: "<PGRST_OPENAPI_SERVER_PROXY_URI>"
            - name: PGRST_DB_ANON_ROLE
              value: "<PGRST_OPENAPI_SERVER_PROXY_URI>"
            - name: PGRST_DB_SCHEMA
              value: "<PGRST_DB_SCHEMA>"
            - name: PGRST_DB_URI
              value: "<PGRST_DB_URI>"
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
