k8-deploy/postgrest-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdcm-api-postgrest-ingress-service
  namespace: pdcm-api
  labels:
    app: pdcm-api-postgrest-ingress-service
    tier: frontend
spec:
  type: ClusterIP
  ports:
   - port: 3000
  selector:
    app: postgrest
    tier: frontend
