k8-deploy/postgrest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdcm-api-ingress
  namespace: pdcm-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/api)$ $1/ permanent;
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
        gzip on;
        gzip_disable "MSIE [1-6]\.";
        gzip_vary on;
        gzip_proxied any;
        gzip_comp_level 5;
        gzip_min_length 512;
        gzip_buffers 16 128k;
        gzip_http_version 1.1;
        gzip_types
            application/json
            application/vnd.api+json
            application/openapi+json;
spec:
  rules:
    - host: "cancermodels.org"
      http:
        paths:
          - path: "/api(/|$)(.*)"
            backend:
              serviceName: postgrest
              servicePort: 3000
